{
    "name": "PlayerMove",
    "maps": [
        {
            "name": "CameraMove",
            "id": "029f781a-b1a3-4167-a846-726cc38a3c67",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "ee2c4ea0-c8df-497f-aed1-ca7016910f7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "9741aa12-3b4a-4c07-a0b9-d391e643df9a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf88ad02-2640-4c2f-836d-d77429d99d1c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e00f93-dfa5-4431-af8f-a3eea0480c90",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}